Wire most thiings up